# ESP32-Portapack

Source/: sdkconfig
Source/components/i2cdev/: i2cdev.h
Source/components/mpu9250/: CMakeLists.txt  ak8963.c  calibrate.c  mpu9250.c
Source/components/mpu9250/include/: ak8963.h  calibrate.h  mpu9250.h
Source/data/: index.css  index.html  ota.html  setup.css  setup.html
Source/main/: CMakeLists.txt  environment.c  environment.h  main.cpp  orientation.c  orientation.h  sensordb.c  sensordb.h  webserver.h  wifim.cpp  wifim.h
Source/main/ppi2c/: i2c_slave_driver.c
